@@ -147,7 +147,7 @@ namespace Kaguya.Modules
 
             var account = UserAccounts.GetAccount(user as SocketUser);
             embed.WithTitle("Experience Points");
-            embed.WithDescription($"{Context.User.Mention} has `{account.EXP.ToString("N0")}` EXP.");
+            embed.WithDescription($"{user.Mention} has `{account.EXP.ToString("N0")}` EXP.");
             await BE();
         }
 
